--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://admin:wPe1nxwhQB2W0oiP@cluster-cafe.owpoy4l.mongodb.net/cafeDB
+SECRETORPRIVATEKEY=Walteribane_8612
 
