--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ SECRETORPRIVATEKEY=Walteribane_8612
 
 GOOGLE_CLIENT_ID=1037066062167-0omjl335lvcudugjefbgl57t0sm5j9ne.apps.googleusercontent.com
 GOOGLE_SECRET_ID=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
+
+CLOUDINARY_URL=cloudinary://745138436663282:8lyAWPO3OEcocnRRh0fC5XS-l-w@dfmzwu6gs
